# ai_vision_chat

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ai_vision_chat.cpp  ai_vision_chat.h
head/: AudioTake.h  AudioTransLate.h  RoundThread.h  Send.h  Viewer.h
source/: AudioTask.cpp  AudioTranslate.cpp  Send.cpp  Viewer.cpp
